--- a/welcome_page.html
+++ b/welcome_page.html
@@ -9,8 +9,8 @@
     <body>
         
         <div class="l1">
-        <button type="button" onclick="" class="dot"></button>
-            <div class="mytext">
+        <span id="dot"></span>
+            <div id="mytext">
                 <em>Shubham Chaudhari</em>
             </div>
         </div>
